--- a/css/style.css
+++ b/css/style.css
@@ -388,44 +388,44 @@ nav .nav-content .nav-container {
   margin-top: 4rem;
 }
 
-.project {
-  padding: 16rem 0;
-}
-
-.project-1 {
+#projects {
   background: #0f2027;
-  background: -webkit-gradient(linear, left top, right top, from(#0f2027), color-stop(#203a43), to(#2c5364));
-  background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
 }
 
-.project-2 {
-  background: #0f0c29;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, right top, left top, from(#24243e), color-stop(#302b63), to(#0f0c29));
-  background: linear-gradient(to left, #24243e, #302b63, #0f0c29);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+#projects h2 {
+  font-size: 4.5rem;
+  padding-top: 7rem;
+  color: #fff;
+  text-align: center;
 }
 
-.project-3 {
-  background: #141e30;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, left top, right top, from(#243b55), to(#141e30));
-  background: linear-gradient(to right, #243b55, #141e30);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+.project {
+  padding: 8rem 0;
+  width: 75%;
+  margin: 0 auto;
+  background: #0f2027;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .project-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 65%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   margin: 0 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 0 7rem;
 }
 
 .project-img {
-  margin-right: 5rem;
+  margin-bottom: 3rem;
 }
 
 .project-img a:hover img {
@@ -444,10 +444,9 @@ nav .nav-content .nav-container {
 .project-text {
   color: #fff;
   margin-right: 2rem;
-  width: 150%;
 }
 
-.project-text .view-code-1 {
+.project-text .view-code {
   padding: 1rem 2rem;
   border-radius: 3px;
   background-color: #089292;
@@ -455,45 +454,11 @@ nav .nav-content .nav-container {
   display: inline-block;
   -webkit-transition: 0.3s all;
   transition: 0.3s all;
-  margin: 0 1rem 1.5rem 0;
+  margin: 1rem 1rem 1.5rem 0;
 }
 
-.project-text .view-code-1:hover {
+.project-text .view-code:hover {
   background-color: #056969;
-  -webkit-box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
-  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
-}
-
-.project-text .view-code-2 {
-  padding: 1rem 2rem;
-  border-radius: 3px;
-  background-color: #aa6aff;
-  font-size: 2rem;
-  display: inline-block;
-  -webkit-transition: 0.3s all;
-  transition: 0.3s all;
-  margin: 0 1rem 1.5rem 0;
-}
-
-.project-text .view-code-2:hover {
-  background-color: #783ac9;
-  -webkit-box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
-  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
-}
-
-.project-text .view-code-3 {
-  padding: 1rem 2rem;
-  border-radius: 3px;
-  background-color: #32a5f1;
-  font-size: 2rem;
-  display: inline-block;
-  -webkit-transition: 0.3s all;
-  transition: 0.3s all;
-  margin: 0 1rem 1.5rem 0;
-}
-
-.project-text .view-code-3:hover {
-  background-color: #0f6197;
   -webkit-box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
   box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.75);
 }
@@ -531,45 +496,19 @@ nav .nav-content .nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .project-icons-1 p {
   margin-right: 2.5rem;
+  margin-bottom: 0;
+  padding: 0.5rem;
 }
 
 .project-icons-1 p i {
   margin-right: 0.7rem;
   color: #23ffff;
-}
-
-.project-icons-2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.project-icons-2 p {
-  margin-right: 2.5rem;
-}
-
-.project-icons-2 p i {
-  margin-right: 0.3rem;
-  color: #aa6aff;
-}
-
-.project-icons-3 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.project-icons-3 p {
-  margin-right: 2.5rem;
-}
-
-.project-icons-3 p i {
-  margin-right: 0.7rem;
-  color: #32a5f1;
 }
 
 footer {
